# coreir

./: .bazelrc  .clang-format  .gitignore  .travis.yml  BUILD  CMakeLists.txt  CMakeLists.txt.in  FileFormat.md  INSTALL.md  LICENSE.txt  Makefile  README.md  TODO  WORKSPACE  clean  combplan.txt  counters.json  data_integrity_scoreboard.json  defs.bzl  jsonFormat.md  magmair.t  travis_script
libs/: BUILD  CMakeLists.txt  Makefile  aetherlinglib.cpp  aetherlinglib.h  cgra.json  common.h  commonlib.cpp  commonlib.h  float.cpp  float.h  float_CW.cpp  float_CW.h  float_DW.cpp  float_DW.h  ice40.cpp  ice40.h  rtlil.cpp  rtlil.h  stdlib.cpp  stdlib.hpp  stdlib_v1.hpp
libs/aetherlinglib/: BUILD  aeDehydrate.h  aeFlatten.h  aeMap.h  aeOverlapPartition.h  aeReduce.h  aeStreamifyArrayify.h  aeZip2.h
simulator/: BUILD  CMakeLists.txt  bsim_lib.hpp  codegen.cpp  codegen.h  coreirsim.h  dag_optimization.h  dag_optimiziation.cpp  interpret.cpp  interpreter.h  layout.cpp  layout.h  low_rep.cpp  low_rep.h  multithreading.cpp  multithreading.h  output.cpp  output.h  print_c.cpp  print_c.h  sim.cpp  simulator.h  subcircuit.cpp  subcircuit.h
src/: CMakeLists.txt  Makefile  TODO  _Makefile  _compiler.cpp  _coreir_libs.cpp  _instdag.hpp  _typedcoreir.cpp  addtree.cpp  addtree3.cpp  args.cpp  args.hpp  capi.c  casting.hpp  clean  common.cpp  common.hpp  context.cpp  context.hpp  coreir.cpp  coreir.h  cpp_api.md  directedview.cpp  directedview.hpp  enums.hpp  error.hpp  fileIO.cpp  genargs.cpp  genargs.hpp  helpers.cpp  inline.cpp  instantiable.cpp  instantiable.hpp  lib.hpp  magmair.cpp  magmair.hpp  magmairtypes.t  metadata.hpp  moduledef.cpp  moduledef.hpp  (+21 more)
src/binary/: Makefile  _Makefile  coreir.cpp  cxxopts.hpp  interpreter.cpp  passlib.h  simulator.cpp
src/casting/: type_traits.h
src/cleanup/: verilog.cpp
src/common/: logging_lite.cpp
src/core/: Makefile  _record_t.hpp  addtree.cpp  compiler.cpp  context.cpp  context.hpp  coreir.cpp  coreir.hpp  enums.hpp  genargs.cpp  genargs.hpp  helpers.cpp  instantiable.cpp  instantiable.hpp  magmair.cpp  magmair.hpp  magmairLib.hpp  metadata.hpp  namespace.hpp  toFile.cpp  toFile.hpp  toNode.cpp  toNode.hpp  typeCache.hpp  typecache.cpp  typecache.hpp  typeconstructors.cpp  typedcoreir.cpp  typedcoreir.hpp  types.cpp  types.hpp  verilog.cpp  verilog.hpp
src/core2/: Makefile  compiler.cpp  coreir.cpp  coreir.hpp  enums.hpp  genargs.hpp  helpers.cpp  metadata.hpp  typecache.cpp  types.cpp  types.hpp  verilog.hpp
src/coreir-c/: CMakeLists.txt  Makefile  args-c.cpp  common-c.hpp  coreir-c.cpp  simulator-c.cpp  types-c.cpp  values-c.cpp
src/default_libs/: corebit.cpp  coreir.cpp  mantle.cpp  memory.cpp
src/definitions/: core.hpp  coreFirrtl.hpp  coreVerilog.hpp  corebitFirrtl.hpp  corebitVerilog.hpp
src/examples/: Makefile  _addtree.cpp  _addtree3.cpp  add4.cpp  addtree.cpp  addtreeNS.cpp  gentest.cpp  register.cpp  rv.cpp
src/ir/: CMakeLists.txt  Makefile  _Makefile  _args.cpp  _fileIO.cpp  _stdlib_state.cpp  args.cpp  args.hpp  common.cpp  common.hpp  constructor.cpp  context.cpp  context.hpp  coreir_symbol_table.cpp  coreirlib.cpp  coreirprims.cpp  coreirprims.hpp  directedview.cpp  directedview.hpp  dynamiclibrary.cpp  error.hpp  fileIO.cpp  fileReader.cpp  fileWriter.cpp  forcecast.cpp  fwd_declare.hpp  generator.cpp  generatordef.cpp  generatordef.hpp  globalvalue.cpp  inline.cpp  instance_graph_logger.cpp  instancegraph.cpp  instantiable.cpp  instantiable.hpp  metadata.hpp  module.cpp  moduledef.cpp  moduledef.hpp  moduledef_validate.cpp  (+23 more)
src/ir/casting/: casting.hpp
src/ir/headers/: _bk_core.hpp  core.hpp  corebit.hpp  mantle.hpp  memories.hpp
src/ir/typegenlang/: _vtype.hpp  common.hpp  typegenlang.hpp  vtype.hpp
src/lib/: Makefile
src/lib/coreir-c/: Makefile  args-c.cpp  common-c.hpp  coreir-c.cpp  types-c.cpp
src/lib/libs/: Makefile  _stdlib_bitwise.cpp  _stdlib_convert.cpp  _stdlib_state.cpp  cgralib.cpp  commonlib.cpp  stdlib.cpp
src/lib/passes/: Makefile  _flattenallpass.cpp  _flattenmixedtypespass.cpp  flatten.cpp  flattenallpass.hpp  inline.cpp  instancegraph.cpp  matchandreplace.cpp  matchandreplace.hpp  matching.cpp  passes.cpp  passmanager.cpp  runallgenerators.cpp  runallgeneratorspass.hpp  rungen.cpp  typecheck.cpp  typecheck.hpp
src/libs/: CMakeLists.txt  Makefile  _prims  aetherlinglib.cpp  cgralib.cpp  cgralib.h  common.cpp  commonlib.cpp  float.cpp  float_CW.cpp  float_DC.cpp  float_DW.cpp  ice40.cpp  rtlil.cpp  stdlib.cpp  stdprims.cpp  stdprims.hpp
src/libs/aetherlinglib/: aeConv.h  aeConvN.h  aeConvN.ho  aeDehydrate.h  (+9 more)
src/passes/: Makefile  TODO  _runallgenerators.cpp  firrtlpass.cpp  flattenallpass.cpp  flattenconnections.cpp  matchandreplace.cpp  printpass.cpp  runallgeneratorspass.cpp  wireclockpass.cpp
src/simulator/: CMakeLists.txt  Makefile  _Makefile  algorithm.hpp  bsim_lib.hpp  codegen.cpp  dag_optimiziation.cpp  dynamic_bit_vector.h  interpret.cpp  interpret.hpp  layout.cpp  low_rep.cpp  multithreading.cpp  multithreading.hpp  op_graph.cpp  op_graph.hpp  output.cpp  output.hpp  print_c.cpp  print_c.hpp  sim.cpp  sim.hpp  simTypes.hpp  subcircuit.cpp  utils.cpp  utils.hpp  wire_node.cpp  wire_node.hpp  wiring_utils.cpp
tests/gtest/: CMakeLists.txt  CMakeLists.txt.in  add_golden.v  array_select.json  array_select_golden.v  assert_pass.h  blackbox_verilog_golden.v  blackbox_verilog_in.json  debug_info_golden.v  inline_verilog.json  inline_verilog_golden.v  inline_verilog_top.json  inline_verilog_top_golden.v  intermediate_connection.json  intermediate_connection_golden.v  mux.json  mux_golden.v  port_order.json  port_order_golden.v  register_mode.json  register_mode_golden.v  test_flattentypes.cpp  test_flattentypes2.cpp  test_hierarchical_select.cpp  test_if_reconstruction.cpp  test_inline_instance.cpp  test_inline_wires.cpp  test_instance_graph_logger.cpp  test_isolate.cpp  test_link_defs.cpp  test_linking.cpp  test_mantle.cpp  test_memory.cpp  test_slice.cpp  test_unit.cpp  test_verilog.cpp  test_verilog_metadata.cpp  test_verilog_ndarray.cpp  two_ops.json  two_ops_bit.json  (+5 more)
(+1107 files in other folders)
